[package]
name = "d16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.0", features = ["serde", "testing"] }
either = "1.6.1"
hex = { version = "0.4.3", features = ["serde"] }
